--- a/app/globals.css
+++ b/app/globals.css
@@ -167,3 +167,76 @@ button {
     @apply bg-background text-foreground;
   }
 }
+
+.react-datepicker__month-container {
+  width: 100% !important;
+  min-width: 0 !important;
+  max-width: 100% !important;
+  height: 100% !important;
+  min-height: 0 !important;
+  max-height: 100% !important;
+  box-sizing: border-box;
+}
+
+.react-datepicker__header {
+  width: 100% !important;
+  min-width: 0 !important;
+  max-width: 100% !important;
+  height: 3.1rem !important;
+  min-height: 0 !important;
+  box-sizing: border-box;
+  padding-top: 0.25rem !important;
+  padding-bottom: 0.25rem !important;
+}
+
+.react-datepicker__current-month {
+  width: 100% !important;
+  min-width: 0 !important;
+  max-width: 100% !important;
+  box-sizing: border-box;
+  font-size: 1.25rem !important;
+  margin-top: -0.25rem !important;
+  margin-bottom: 0.1rem !important;
+}
+
+.react-datepicker__day-names {
+  width: 100% !important;
+  min-width: 0 !important;
+  max-width: 100% !important;
+  height: 1rem !important;
+  box-sizing: border-box;
+  font-size: 1rem !important;
+  margin-top: -0.2rem !important;
+  margin-bottom: 0.1rem !important;
+}
+
+.react-datepicker__month {
+  display: grid !important;
+  grid-template-rows: repeat(6, 1fr) !important;
+  width: 100% !important;
+  min-width: 0 !important;
+  max-width: 100% !important;
+  height: 80% !important;
+  min-height: 0 !important;
+  max-height: 100% !important;
+  box-sizing: border-box;
+  font-size: 1.25rem !important;
+}
+
+.react-datepicker__week {
+  flex: 1 1 0 !important;
+  display: flex !important;
+  width: 100% !important;
+  min-width: 0 !important;
+  max-width: 100% !important;
+  box-sizing: border-box;
+}
+
+.react-datepicker__day {
+  width: 2.2rem !important;
+  height: 1.5rem !important;
+  line-height: 1.4rem !important;
+  font-size: 1rem !important;
+  margin: 0.1rem !important;
+  border-radius: 0.75rem !important;
+}
